# GaeGebra

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  debug.sh  docs.sh  project_stats  start.sh  stats.sh
src/: debugmalloc.h  defines.h  includes.h  main.c
src/app/: app.c  app.h
src/color/: color.c  color.h
src/colors/: colors.c  colors.h
src/font/: font.c  font.h
src/fonts/: fonts.c  fonts.h
src/geometry/coordinate_system/: coordinate_system.c  coordinate_system.h
src/geometry/intersection/: intersection.c  intersection.h
src/geometry/shape/: shape.c  shape.h
src/geometry/vector2/: vector2.c  vector2.h
src/input/: input.c  input.h
src/renderer/: renderer.c  renderer.h
src/tests/: ui_test.txt
src/texture/: texture.c  texture.h
src/ui/: ui.c  ui.h
src/ui/ui_constraint/: ui_constraint.c  ui_constraint.h
src/ui/ui_constraints/: ui_constraints.c  ui_constraints.h
src/ui/ui_element/: ui_element.c  ui_element.h
src/ui/ui_elements/: ui_elements.c  ui_elements.h
src/utils/math/: math.c  math.h
src/utils/vector/: vector.c  vector.h
src/window/: window.c  window.h
